--- a/hw3.org
+++ b/hw3.org
@@ -269,6 +269,41 @@ print("Feature sets saved as pickle files.")
    the NLTK naive Bayes classifier).
 
 
+#+BEGIN_SRC python
+import pickle
+import nltk
+from nltk.classify import NaiveBayesClassifier
+from nltk.metrics import accuracy
+
+with open("train_features.pkl", "rb") as train_file:
+    train_features = pickle.load(train_file)
+
+with open("test_features.pkl", "rb") as test_file:
+    test_features = pickle.load(test_file)
+
+def extract_features(word):
+    features = {
+        "last_three": word[-3:],
+        "last_two": word[-2:],
+        "first_letter": word[0],
+        "length": len(word)
+    }
+    return features
+
+train_set = [(extract_features(word), pos) for word, pos in train_features.items()]
+test_set = [(extract_features(word), pos) for word, pos in test_features.items()]
+
+classifier = NaiveBayesClassifier.train(train_set)
+
+accuracy_score = nltk.classify.accuracy(classifier, test_set)
+print(f"Naive Bayes Classifier Accuracy: {accuracy_score * 100:.2f}%")
+
+print("\nTop 10 Most Informative Features:")
+classifier.show_most_informative_features(10)
+#+END_SRC
+
+
+
 4. [@4] <<lda>> Continuing with the Bayesian theme of problem [[bayesian]],
    let's try some [[http://scikit-learn.org/stable/modules/generated/sklearn.discriminant_analysis.LinearDiscriminantAnalysis.html#sklearn.discriminant_analysis.LinearDiscriminantAnalysis][linear discriminant analysis]] with the algorithm found in
    *scikit-learn*, using the tags in the saved [[fea-set][feature set]] as the labels we
